--- a/static/index.html
+++ b/static/index.html
@@ -696,8 +696,6 @@
         function renderAssetSettingsPanel(symbol, safeId, cfg) {
             // Pair Strategy fields
             const gridDist = cfg.grid_distance || 50;
-            const tpPips = cfg.tp_pips || 150;
-            const slPips = cfg.sl_pips || 200;
             const pipSize = cfg.pip_size || 0.0001;
             const bxLot = cfg.bx_lot || 0.01;
             const syLot = cfg.sy_lot || 0.01;
@@ -720,9 +718,8 @@
                     </div>
                 </summary>
                 <div class="p-3 space-y-3 border-t border-slate-700">
-                    <!-- Grid Distance & TP/SL -->
-                    <!-- Grid Distance & TP/SL -->
-                    <div class="grid grid-cols-4 gap-2">
+                    <!-- Grid Distance -->
+                    <div class="grid grid-cols-2 gap-2">
                         <div>
                             <label class="block text-[10px] text-gray-500">Spread/Grid (pips)</label>
                             <input type="number" id="griddist_${safeId}" step="1" value="${gridDist}"
@@ -732,16 +729,6 @@
                             <label class="block text-[10px] text-gray-500">Pip Size</label>
                             <input type="number" readonly value="${pipSize}"
                                 class="w-full p-1.5 text-sm rounded bg-slate-800 border border-slate-700 text-slate-500">
-                        </div>
-                        <div>
-                            <label class="block text-[10px] text-green-400">TP (pips)</label>
-                            <input type="number" id="tppips_${safeId}" step="1" value="${tpPips}"
-                                class="w-full p-1.5 text-sm rounded bg-slate-900 border border-green-700/50">
-                        </div>
-                        <div>
-                            <label class="block text-[10px] text-red-400">SL (pips)</label>
-                            <input type="number" id="slpips_${safeId}" step="1" value="${slPips}"
-                                class="w-full p-1.5 text-sm rounded bg-slate-900 border border-red-700/50">
                         </div>
                     </div>
                     
@@ -873,8 +860,6 @@
                     payload.symbols[symbol] = {
                         enabled: true,
                         grid_distance: parseFloat(document.getElementById(`griddist_${safeId}`)?.value) || 50,
-                        tp_pips: parseFloat(document.getElementById(`tppips_${safeId}`)?.value) || 150,
-                        sl_pips: parseFloat(document.getElementById(`slpips_${safeId}`)?.value) || 200,
                         bx_lot: parseFloat(document.getElementById(`bxlot_${safeId}`)?.value) || 0.01,
                         sy_lot: parseFloat(document.getElementById(`sylot_${safeId}`)?.value) || 0.01,
                         sx_lot: parseFloat(document.getElementById(`sxlot_${safeId}`)?.value) || 0.01,
